--- a/Helper.css
+++ b/Helper.css
@@ -15,6 +15,12 @@ So it will override default styling across browsers. */
 	--Alert: #ff0000;
 }
 
+/* 100% height of html and body element */
+html,
+body {
+	height: 100%;
+}
+
 /* Smooth Scrolling */
 html {
 	scroll-behavior: smooth;
