--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,11 @@ html {
 	background-color: #fffaf0;
 }
 
+html,
+body {
+	height: 100%;
+}
+
 a {
 	text-decoration: none;
 }
@@ -44,7 +49,7 @@ a:focus {
 	background-color: var(--deep-champagne);
 }
 
-.Logo {
+.Logo_Container {
 	padding: 1rem;
 	font-size: 1.5rem;
 	font-weight: bolder;
@@ -52,6 +57,21 @@ a:focus {
 	display: flex;
 	/* justify-content: space-between; */
 	justify-content: center;
+	border: 1px solid black;
+}
+
+.Logo {
+	height: 3rem;
+	width: auto;
+	transition: linear 100ms;
+	border: 1px solid black;
+	position: relative;
+}
+
+a .Logo:hover,
+a .Logo:active,
+a .Logo:focus {
+	box-shadow: 2px 2px 5px black;
 }
 
 .Navbar {
@@ -63,13 +83,10 @@ a:focus {
 	position: sticky;
 	top: 0;
 	left: 0;
+	box-shadow: 0px 5px 15px #ccc;
+	border: 1px solid black;
 }
 
-.holder {
-	position: absolute;
-	height: 100%;
-	background-color: #000000;
-}
 .Navbar_Links {
 	list-style-type: none;
 	display: flex;
@@ -92,9 +109,13 @@ a:focus {
 
 article {
 	padding: 1rem;
-	padding-top: 3rem;
+	padding-top: 3.5rem;
 	margin-left: 2rem;
 	border-bottom: 1px solid #aaa;
+}
+
+article h1 {
+	text-decoration: underline;
 }
 
 ol > li {
